--- a/app/views/card_add/index.html.haml
+++ b/app/views/card_add/index.html.haml
@@ -79,7 +79,7 @@
         %li
           ログアウト
           %i.fa.fa-angle-right
-  .l--card_add
+  .l-card_add
     %form.card__form{action: "/card_add/:card_add_id/crejit_confirmation", method: "get"}
       .card__form--header
         %h2 支払い方法
